# GenBack

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  commands.rs  config.rs  generations.rs  lib.rs  logger.rs  main.rs  network.rs  notify.rs  robocopy.rs  scheduler.rs  trashbox.rs  vss.rs
src/components/: ui.tsx
src/components/profile/: ConfigTab.tsx  LogTab.tsx  OverviewTab.tsx
src/lib/: tauri.ts  theme.tsx
src/pages/: Dashboard.tsx  Execution.tsx  GlobalSettings.tsx  Logs.tsx  ProfilesView.tsx  Schedule.tsx  Settings.tsx
