[package]
name = "genback"
version = "1.0.0"
description = "Generation-managed Robocopy Backup Tool"
authors = ["genback"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "genback_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# headless CLI モード用のサブコマンド
# スケジューラから --headless で呼ばれる際にコンソール出力が可能
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
regex = "1"
dirs = "6"

